<resources>
    <string name="app_name">BarcodeDemo</string>
    <string name="scan_it">Scan It</string>
    <string name="name_of_the_product">Product name</string>
    <string name="description_of_the_product">Product description</string>
    <string name="price">Price</string>
    <string name="save_product_to_my_basket">Save product to my basket</string>
    <string name="saved_products">Saved products</string>
    <string name="say_it">Say it</string>
    <string name="browsing_history">Browsing History</string>
    <string name="sign_out">Sign out</string>
    <string name="search_barcode">Search barcode</string>
    <string name="search_by_typing_a_barcode">Search by typing a barcode</string>
</resources>
